--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 .covid-cases h3{
   font-weight: 600;
 }
-.covid-cases .deaths{
-  color: red;
-}
+.covid-cases .deaths{}
 .number{
   font-size: 35px;
   font-weight: 700;
